--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 .full-screen-banner {
     height: 100vh;
-    background-image: url(../img/jadajada.jpg);
+    background-image: url(../img/yayayaya.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -36,7 +36,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    color: black;
+    color: white;
   }
   
   .logo {
@@ -166,11 +166,11 @@
       margin-bottom: 5px;
     }
     .button {
-      background-color: white;
+      background-color: #4F6137;
       padding: 12px 16px;
       border-radius: var(--border-radius);
       border: none;
-      color: black;
+      color: white;
       cursor: pointer;
       transition: opacity 100ms ease-in-out;
       height: 50px;
