--- a/css/main.css
+++ b/css/main.css
@@ -103,11 +103,11 @@ li {
 
 /* BUTTONS */
 .button {
-  background-color: white;
+  background-color: #4F6137;
   padding: 12px 16px;
   border-radius: var(--border-radius);
   border: none;
-  color: black;
+  color: white;
   cursor: pointer;
   transition: opacity 100ms ease-in-out;
   height: 50px;
