--- a/css/index.css
+++ b/css/index.css
@@ -1,202 +1,201 @@
 .full-screen-banner {
-    height: 100vh;
-    background-image: url(../img/yayayaya.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  height: 100vh;
+  background-image: url(../img/yayayaya.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer {
+  margin-top: auto;
+  /* background-image: url(../img/footer-white.svg); */
+  height: 37px;
+  width: 85px;
+  margin-top: 30px;
+  margin-bottom: 15px;
+}
+
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.landing-donut-container {
+  margin-left: 40%;
+  margin-top: 5%;
+  justify-content: space-between;
+}
+
+.nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+}
+
+.logo {
+  /* background-image: url(../img/Rectangle\ 58.svg); */
+  /* height: 35px;
+      width: 178px; */
+  font-size: 24px;
+  color: white;
+  font-weight: 300;
+}
+
+.landing-paragraph {
+  color: white;
+  font-size: 22px;
+  font-weight: 300;
+  margin-left: 0%;
+}
+
+.the-donut-title {
+  color: white;
+  font-size: 42px;
+  font-weight: 800;
+}
+
+.the-donut-landing-paragraph {
+  color: white;
+  font-weight: 300;
+  font-size: 16px;
+}
+
+/* Style the navigation menu */
+.topnav {
+  overflow: hidden;
+  background-color: transparent;
+  position: fixed;
+}
+
+/* Hide the links inside the navigation menu (except for logo/home) */
+.topnav #myLinks {
+  display: none;
+  background-color: white;
+}
+
+/* Style navigation menu links */
+.topnav a {
+  color: black;
+  padding: 14px 0px;
+  text-decoration: none;
+  font-size: 20px;
+  display: block;
+  margin-left: 15px;
+}
+
+/* Style the hamburger menu */
+.topnav a.icon {
+  background: transparent;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+/* Add a grey background color on mouse-over */
+.topnav a:hover {
+  background-color: transparent;
+  color: white;
+}
+
+/* Style the active link (or home/logo) */
+.active {
+  background-color: transparent;
+  color: white;
+}
+/* .mobile-header-container {
+      display: none;
+    } */
+
+@media (max-width: 1023px) {
+  /* 
+      .header-container {
+        display: none;
+      } */
+
+  .mobile-header-container {
+    display: inline-block;
+    width: 90%;
+  }
+
+  .button {
+    margin-bottom: 20%;
+  }
+  .container.mobile-fluid {
+    padding: 0;
+  }
+
+  .container {
+    display: flex;
+    max-width: 100%;
+    flex-direction: column;
+  }
+
+  .landing-donut-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+    margin-left: 40%;
+    margin-top: 0px;
+    height: 40%;
+    justify-content: center;
   }
-  
+  .landing-paragraph {
+    color: white;
+    font-size: 18px;
+    font-weight: 300;
+    margin-left: 0%;
+  }
+
+  .the-donut-title {
+    color: white;
+    font-size: 32px;
+    font-weight: 800;
+  }
+
+  .the-donut-landing-paragraph {
+    color: white;
+    font-weight: 300;
+    font-size: 14px;
+    margin-bottom: 5px;
+  }
+  .button {
+    background-color: #4f6137;
+    padding: 12px 16px;
+    border-radius: var(--border-radius);
+    border: none;
+    color: white;
+    cursor: pointer;
+    transition: opacity 100ms ease-in-out;
+    height: 50px;
+    width: 150px;
+    margin-top: 15px;
+  }
+
   .footer {
     margin-top: auto;
     /* background-image: url(../img/footer-white.svg); */
-    height: 37px;
+    height: 38px;
     width: 85px;
     margin-top: 30px;
     margin-bottom: 15px;
   }
-  
-  .container {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .landing-donut-container {
-    margin-left: 40%;
-    margin-top: 5%;
-    justify-content: space-between;
-  }
-  
-  .nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    color: white;
-  }
-  
-  .logo {
-    /* background-image: url(../img/Rectangle\ 58.svg); */
-    /* height: 35px;
-      width: 178px; */
-    font-size: 24px;
-    color: white;
-    font-weight: 300;
-  }
-  
-  .landing-paragraph {
-    color: white;
-    font-size: 22px;
-    font-weight: 300;
-    margin-left: 0%;
-  }
-  
-  .the-donut-title {
-    color: white;
-    font-size: 42px;
-    font-weight: 800;
-  }
-  
-  .the-donut-landing-paragraph {
-    color: white;
-    font-weight: 300;
-    font-size: 16px;
-  }
-  
-  /* Style the navigation menu */
-  .topnav {
-    overflow: hidden;
-    background-color: transparent;
-    position: fixed;
-  }
-  
-  /* Hide the links inside the navigation menu (except for logo/home) */
-  .topnav #myLinks {
-    display: none;
-    background-color: white;
-  }
-  
-  /* Style navigation menu links */
-  .topnav a {
-    color: black;
-    padding: 14px 0px;
-    text-decoration: none;
-    font-size: 20px;
-    display: block;
-    margin-left: 15px;
-  }
-  
-  /* Style the hamburger menu */
-  .topnav a.icon {
-    background: transparent;
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  
-  /* Add a grey background color on mouse-over */
-  .topnav a:hover {
-    background-color: transparent;
-    color: white;
-  }
-  
-  /* Style the active link (or home/logo) */
-  .active {
-    background-color: transparent;
-    color: white;
-  }
-  /* .mobile-header-container {
-      display: none;
-    } */
-  
-  @media (max-width: 1023px) {
-    /* 
-      .header-container {
-        display: none;
-      } */
-  
-    .mobile-header-container {
-      display: inline-block;
-      width: 90%;
-    }
-  
-    .button {
-      margin-bottom: 20%;
-    }
-    .container.mobile-fluid {
-      padding: 0;
-    }
-  
-    .container {
-      display: flex;
-      max-width: 100%;
-      flex-direction: column;
-    }
-  
-    .landing-donut-container {
-      display: flex;
-      flex-direction: column;
-      margin-left: 40%;
-      margin-top: 0px;
-      height: 40%;
-      justify-content: center;
-    }
-    .landing-paragraph {
-      color: white;
-      font-size: 18px;
-      font-weight: 300;
-      margin-left: 0%;
-    }
-  
-    .the-donut-title {
-      color: white;
-      font-size: 32px;
-      font-weight: 800;
-    }
-  
-    .the-donut-landing-paragraph {
-      color: white;
-      font-weight: 300;
-      font-size: 14px;
-      margin-bottom: 5px;
-    }
-    .button {
-      background-color: #4F6137;
-      padding: 12px 16px;
-      border-radius: var(--border-radius);
-      border: none;
-      color: white;
-      cursor: pointer;
-      transition: opacity 100ms ease-in-out;
-      height: 50px;
-      width: 150px;
-      margin-top: 15px;
-    }
-  
-    .footer {
-      margin-top: auto;
-      background-image: url(../img/footer-white.svg);
-      height: 38px;
-      width: 85px;
-      margin-top: 30px;
-      margin-bottom: 15px;
-    }
-  }
-  
-  .landing-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex: 1;
-  }
-  
-  .landing-content > div {
-    align-self: flex-end;
-    margin-top: 32px;
-  }
-  
+}
+
+.landing-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex: 1;
+}
+
+.landing-content > div {
+  align-self: flex-end;
+  margin-top: 32px;
+}
