--- a/css/main.css
+++ b/css/main.css
@@ -103,7 +103,7 @@ li {
 
 /* BUTTONS */
 .button {
-  background-color: #4F6137;
+  background-color: #4f6137;
   padding: 12px 16px;
   border-radius: var(--border-radius);
   border: none;
@@ -128,7 +128,7 @@ li {
 
 footer {
   margin-top: auto;
-  background-image: url(../img/footer-black.svg);
+  /* background-image: url(../img/footer-black.svg); */
   height: 34px;
   width: 85px;
   margin: auto;
@@ -171,7 +171,7 @@ h3 {
 
   footer {
     margin-top: auto;
-    background-image: url(../img/footer-black.svg);
+    /* background-image: url(../img/footer-black.svg); */
     height: 34px;
     width: 85px;
     margin: auto;
