--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+.active-nav-title {
+  border-bottom: white solid 2px;
+  margin-bottom: -2px;
+}
 .full-screen-banner {
   height: 100vh;
   background-image: url(../img/yayayaya.jpg);
@@ -17,6 +21,13 @@
   width: 85px;
   margin-top: 30px;
   margin-bottom: 15px;
+}
+
+.fa-chevron-down {
+  color: #f5f5f5;
+  font-size: 40px;
+  opacity: 50%;
+  align-self: center;
 }
 
 .container {
