--- a/css/detailedpost.css
+++ b/css/detailedpost.css
@@ -1,5 +1,5 @@
 .donut-title {
-  color: black;
+  color: white;
   font-size: 62px;
   font-weight: 600;
 }
@@ -11,10 +11,27 @@
   width: 85%;
 }
 
+.full-screen-banner {
+  height: 100vh;
+  background-image: url(../img/yayayaya.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+}
 .donut-sub-title {
-  color: #c4c4c4;
+  color: white;
   font-size: 18px;
-  font-weight: 400;
+  font-weight: 300;
+}
+
+.post-paragraph-image {
+  width: 200px;
+  height: 200px;
+  background-color: red;
 }
 
 .donut-order-paragraph {
@@ -147,6 +164,29 @@
   margin-top: 60px;
 }
 
+.nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+}
+.active-nav-title {
+  border-bottom: white solid 2px;
+  margin-bottom: -2px;
+}
+
+.fa-chevron-down {
+  color: #f5f5f5;
+  font-size: 40px;
+  opacity: 50%;
+  align-self: center;
+}
+.logo {
+  font-size: 24px;
+  color: white;
+  font-weight: 300;
+}
 .donut-info-container {
   display: flex;
   flex-direction: row;
