--- a/css/allposts.css
+++ b/css/allposts.css
@@ -1,43 +1,34 @@
-.news-card {
-  display: flex;
-  flex-direction: column;
+.article-content {
+  width: 100%;
+  height: 20%;
+}
+
+.post-thumbnail {
   width: 100%;
 }
 
-.news-card img {
-  height: 250px;
-  width: 100%;
-  object-fit: cover;
-  margin: 15px 0;
-}
-
-.news-date {
-  color: #8f8f8f;
-  font-size: 12px;
-}
-
-.news-title {
-  color: black;
+.read-more-container {
   font-weight: 600;
-  font-size: 18px;
 }
-
-.news-paragraph {
-  color: #8f8f8f;
-  font-weight: 300;
-  font-size: 16px;
-}
-
-.news-card-container {
+.posts-container {
+  margin-top: 24px;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 30px;
+  gap: 32px;
+}
+
+.posts-title {
+  margin-top: 30px;
 }
 
 .read-more-news {
   font-weight: 400;
   font-size: 16px;
   color: black;
+}
+
+.allposts-paragraph {
+  margin-top: 30px;
 }
 
 .read-more-container {
@@ -52,7 +43,7 @@
 }
 
 .post-preview {
-  max-width: 400px;
+  max-width: 100%;
   background: #f5f5f5;
 }
 .post-preview .article-content {
