--- a/css/contact.css
+++ b/css/contact.css
@@ -11,34 +11,8 @@
   font-weight: 300;
 }
 
-.resume {
-  color: #595959;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: white;
-  display: none;
-  overflow: hidden;
-}
-
-.resume-chevron-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.page-title {
   margin-top: 30px;
-  margin-bottom: 5px;
-  border-bottom: #595959 1px solid;
-  cursor: pointer;
-  width: 97.5%;
-  text-align: left;
-  outline: none;
-  transition: 0.4s;
-}
-
-.resume-title {
-  color: black;
-  font-size: 18px;
-  font-weight: 600;
 }
 
 .sub-title {
@@ -47,18 +21,17 @@
   font-weight: 600;
 }
 
-.resume-paragraph {
-  color: black;
-  font-size: 14px;
-  font-weight: 300;
-  margin-bottom: 30px;
+input {
+  border-bottom: 2px solid var(--primary-color);
+  padding: 8px;
 }
 
-.contact-title {
+.contact-subtitle {
   color: black;
   font-size: 18px;
   font-weight: 600;
   margin-top: 30px;
+  margin-bottom: 15px;
 }
 .contact-paragraph {
   color: #595959;
