--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,20 @@
   border-bottom: white solid 2px;
   margin-bottom: -2px;
 }
+
+.article-content {
+  width: 100%;
+  height: 20%;
+}
+
+.post-thumbnail {
+  width: 100%;
+}
+
+.read-more-container {
+  font-weight: 600;
+}
+
 .full-screen-banner {
   height: 100vh;
   background-image: url(../img/yayayaya.jpg);
@@ -70,6 +84,14 @@
   color: white;
   font-size: 42px;
   font-weight: 800;
+}
+
+.landing-title {
+  color: black;
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 30px;
+  margin-bottom: 15px;
 }
 
 .the-donut-landing-paragraph {
@@ -220,7 +242,7 @@
 }
 
 .post-preview {
-  max-width: 400px;
+  max-width: 100%;
   background: #f5f5f5;
 }
 .post-preview .article-content {
