--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,16 @@
+.carousel-posts-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 32px;
+  margin: 0 32px;
+}
+
+.carousel-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .active-nav-title {
   border-bottom: white solid 2px;
   margin-bottom: -2px;
