--- a/css/index.css
+++ b/css/index.css
@@ -31,7 +31,7 @@
 
 .full-screen-banner {
   height: 100vh;
-  background-image: url(../img/yayayaya.jpg);
+  background-image: url(../img/post12-1.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
