--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,13 @@
   height: 20%;
 }
 
+.article-preview-card {
+  width: 50%;
+}
+.article-preview-card img {
+  width: 100%;
+  object-fit: fill;
+}
 .post-thumbnail {
   width: 100%;
 }
