--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 .carousel-posts-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 32px;
   margin: 0 32px;
 }
