--- a/css/allposts.css
+++ b/css/allposts.css
@@ -37,6 +37,37 @@
   gap: 32px;
 }
 
+.posts-container div {
+  background-color: #f5f5f5;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 0px 0px 16px 0px;
+}
+
+.posts-container img {
+  object-fit: cover;
+  height: 500px;
+}
+.posts-container span {
+  margin: 16px;
+}
+
+.posts-container a {
+  margin: 16px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.posts-container a:hover {
+  font-weight: 800;
+}
+
+.post-title {
+  font-size: 22px;
+  font-weight: 600;
+}
+
 .post-preview {
   max-width: 100%;
   background: #f5f5f5;
