--- a/css/post.css
+++ b/css/post.css
@@ -22,12 +22,13 @@
   justify-content: center;
   color: white;
   padding: 40px;
+  opacity: 100%;
 }
 .full-screen-banner h1 {
-  font-size: 64px;
+  font-size: 24px;
 }
 .full-screen-banner span {
-  font-size: 32px;
+  font-size: 20px;
 }
 .donut-sub-title {
   color: white;
