--- a/css/index.css
+++ b/css/index.css
@@ -3,12 +3,29 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 32px;
   margin: 0 32px;
+  width: 100%;
+  height: 100%;
+}
+
+.carousel-posts-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.carousel-posts-container span {
+  font-size: 20px;
+  font-weight: 600;
 }
 
 .carousel-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.latest-posts-title {
+  font-size: 36px;
 }
 
 .active-nav-title {
