--- a/css/allposts.css
+++ b/css/allposts.css
@@ -41,31 +41,47 @@
   background-color: #f5f5f5;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  padding: 0px 0px 16px 0px;
 }
 
 .posts-container img {
   object-fit: cover;
-  height: 500px;
+  height: 400px;
 }
-.posts-container span {
-  margin: 16px;
+
+.post-subtitle {
+  font-size: 16px;
+  font-weight: 200;
+  margin-bottom: 16px;
 }
 
 .posts-container a {
-  margin: 16px;
   font-size: 18px;
   font-weight: 600;
+}
+
+.post-content-container {
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  height: 250px;
 }
 
 .posts-container a:hover {
   font-weight: 800;
 }
 
+.post-content-container a {
+  margin-top: auto;
+}
+
 .post-title {
   font-size: 22px;
   font-weight: 600;
+  margin-top: 16px;
+}
+
+.post-content-container {
+  padding: 16px;
 }
 
 .post-preview {
